FEAT fs-5 in input

--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,10 @@ footer a{
     color: var(--blusection);
 }
 
+::placeholder{
+    color: rgb(72, 72, 72);
+}
+
 
 /***************************
 DEBUG
